--- a/GlobalSuperStore.ipynb
+++ b/GlobalSuperStore.ipynb
@@ -82,8 +82,8 @@
     "xls = pd.ExcelFile('SuperstoreOrdersReturns.xls')\n",
     "\n",
     "orders = pd.read_excel(xls, 'Orders')\n",
-    "# people = pd.read_excel(xls, 'People')\n",
-    "# returns = pd.read_excel(xls, 'Returns')"
+    "# used following code to convert jupyter notebook file to html to embed as html page\n",
+    "# jupyter nbconvert  --to html  GlobalSuperStore.ipynb"
    ]
   },
   {
