--- a/GlobalSuperStore.ipynb
+++ b/GlobalSuperStore.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -73,17 +73,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 409,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
     "# read GlobalSuperstoreOrders2016.excel file \n",
-    "xls = pd.ExcelFile('SuperstoreOrdersReturns.xls')\n",
+    "xls = pd.ExcelFile('SuperstoreOrders.xlsx')\n",
     "\n",
-    "orders = pd.read_excel(xls, 'Orders')\n",
-    "# used following code to convert jupyter notebook file to html to embed as html page\n",
-    "# jupyter nbconvert  --to html  GlobalSuperStore.ipynb"
+    "orders = pd.read_excel(xls, 'Orders')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# used following code in terminal to convert jupyter notebook file to html to embed as html page\n",
+    "#jupyter nbconvert  --to html  GlobalSuperStore.ipynb"
    ]
   },
   {
