--- a/GlobalSuperStore.ipynb
+++ b/GlobalSuperStore.ipynb
@@ -3284,7 +3284,7 @@
     "\n",
     "We can see that 49% of the variability in Y can be explained using X if we use linear regression model whereas 78% of the variability in Y can be explained using X if we use Random Forest model.\n",
     "But since random forest is known for overfitting, I tried gradient boosting (another ensemble model) and here, 66% of the variability in Y can be explained using X. But, MSE value  is lowest in Random Forest model as compared all other models and we know that the smaller MSE is, the closer the model prediction is to the actual data.\n",
-    "For MSE, the smaller it is, the closer the model prediction is to the actual data. So basically, either a high R2 or a low MSE. (https://stats.stackexchange.com/questions/32596/what-is-the-difference-between-coefficient-of-determination-and-mean-squared)\n",
+    "So basically, either a high R2 or a low MSE. (https://stats.stackexchange.com/questions/32596/what-is-the-difference-between-coefficient-of-determination-and-mean-squared)\n",
     "\n",
     "Therefore, I'll select Random Forest Model as my best model and thus important features are Profit, city, discount, state, sub category, quantity,category, and segment!\n",
     "\n",
